# test_fake_cpp_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: request-main.yaml  self_test.yaml  test.yaml  test_fake_cpp_project.yaml
tests/: fake_tests.cpp
